# Numerical-Calculations

./: .gitignore
Engineering Numerical Methods 2/lab_1/: CMakeLists.txt  README.md
Engineering Numerical Methods 2/lab_1/include/: config.hpp  functions.hpp
Engineering Numerical Methods 2/lab_1/python/: plot_zad1.py  plot_zad2.py  plot_zad3.py  plot_zad4_0.py  plot_zad4_2.py
Engineering Numerical Methods 2/lab_1/src/: main.cpp  solution.cpp
Engineering Numerical Methods 2/lab_2/: CMakeLists.txt  README.md
Engineering Numerical Methods 2/lab_2/include/: config.hpp  functions.hpp
Engineering Numerical Methods 2/lab_2/python/: plot_delta_u.py  plot_u.py
Engineering Numerical Methods 2/lab_2/src/: main.cpp  solution.cpp
Engineering Numerical Methods 2/lab_3/: CMakeLists.txt  README.md
Engineering Numerical Methods 2/lab_3/include/: config.hpp  functions.hpp
Engineering Numerical Methods 2/lab_3/python/: plot_zad1.py  plot_zad2_E_M5.py  plot_zad2_psi_M5.py  plot_zad3_E_M10.py  plot_zad3_E_M30.py  plot_zad3_psi_M10.py  plot_zad3_psi_M30.py
Engineering Numerical Methods 2/lab_3/src/: main.cpp  solution.cpp
Engineering Numerical Methods 2/lab_4/: CMakeLists.txt  README.md
Engineering Numerical Methods 2/lab_4/include/: config.hpp  functions.hpp  solution.hpp
Engineering Numerical Methods 2/lab_4/python/: plot_zad2.py  plot_zad8.py
Engineering Numerical Methods 2/lab_4/src/: functions.cpp  main.cpp  solution.cpp
Engineering Numerical Methods 2/lab_5/: CMakeLists.txt  README.md
Engineering Numerical Methods 2/lab_5/include/: functions.hpp  solution.hpp
Engineering Numerical Methods 2/lab_5/src/: functions.cpp  main.cpp  solution.cpp
Engineering Numerical Methods 2/lab_5_base/: fun.cpp  fun.hpp  main.cpp  pypy.py  zadania.cpp  zadania.hpp
Engineering Numerical Methods 2/lab_6/: CMakeLists.txt  README.md
Engineering Numerical Methods 2/lab_6/include/: functions.hpp  solution.hpp
Engineering Numerical Methods 2/lab_6/python/: create_gif.py  plot_chart.py  plot_grid.py  plot_heatmap.py  plot_modes.py  plot_zad6.py
Engineering Numerical Methods 2/lab_6/src/: functions.cpp  main.cpp  solution.cpp
MOFiT 1/2. Material Point Dynamics/: 2. Material Point Dynamics.ipynb
MOFiT 2/2. Metoda czasu urojonego/: Metoda czasu urojonego.ipynb
MOFiT 2/3. Równanie Schrödingera zależne od czasu/: Równanie Schrödingera zależne od czasu.ipynb
Monte Carlo Methods in Physics/: README.md
Monte Carlo Methods in Physics/lab06/: DxxDyyDxy.gnu  Main.cpp  closed_coordinate.gnu  coordinate.gnu  lab6.ipynb
Monte Carlo Methods in Physics/lab07/: CMakeLists.txt  Main.cpp  active.gnu
Monte Carlo Methods in Physics/lab08/: CMakeLists.txt  main.cpp  plot.py
Monte Carlo Methods in Physics/lab09/: CMakeLists.txt  Main.cpp  lab09.ipynb
Monte Carlo Methods in Physics/lab10/: CMakeLists.txt  main.cpp  script.gnu
Monte Carlo Methods in Physics/lab11/: CMakeLists.txt  main.cpp
Monte Carlo Methods in Physics/lab12/: CMakeLists.txt  main.cpp
Monte Carlo Methods in Physics/lab13/: CMakeLists.txt  concatenate.cpp  lab13_plots.ipynb  main.cpp
Monte Carlo Methods in Physics/lab14/: CMakeLists.txt  eps_mom1.gnu  histogram.gnu  lab14.ipynb  log_sigma.gnu  main.cpp  sigma.gnu
Numerical Methods/lab06/: lab06.ipynb
Numerical Methods/lab07/: lab07.ipynb
Numerical Methods/lab10/: lab10.ipynb
Numerical Methods/lab14/: lab14.ipynb
Physics of Complex Systems/: README.md
Physics of Complex Systems/lab 1/: lab01.ipynb
Physics of Complex Systems/lab 2/: lab02.ipynb
Physics of Complex Systems/lab 3/: lab_03.ipynb
Physics of Complex Systems/lab 4/: lab_04.ipynb
Physics of Complex Systems/lab06/: lab6.ipynb
Physics of Complex Systems/lab07/: lab07.ipynb
Physics of Complex Systems/lab08/: lab08.ipynb
Physics of Complex Systems/lab09/: lab09.ipynb
Simulations of Nano- and Mesoscopic Systems/lab 1/: CMakeLists.txt  README.md
Simulations of Nano- and Mesoscopic Systems/lab 1/include/: QuantumDot.hpp  config.hpp  params.hpp
Simulations of Nano- and Mesoscopic Systems/lab 1/python/: plot_contour.py  plot_energies.py  plot_matrix.py
Simulations of Nano- and Mesoscopic Systems/lab 1/src/: main.cpp
Simulations of Nano- and Mesoscopic Systems/lab 2/: CMakeLists.txt  README.md
Simulations of Nano- and Mesoscopic Systems/lab 2/include/: HartreeFock.hpp  ImaginaryTime.hpp  config.hpp  params.hpp
Simulations of Nano- and Mesoscopic Systems/lab 2/python/: plot_E_vs_a.py  plot_convergence.py  plot_density.py
Simulations of Nano- and Mesoscopic Systems/lab 2/src/: HartreeFock.cpp  ImaginaryTime.cpp  main.cpp
Simulations of Nano- and Mesoscopic Systems/lab 3/: CMakeLists.txt  README.md
Simulations of Nano- and Mesoscopic Systems/lab 3/include/: DoubleQuantumDot.hpp  TimeEvolution.hpp  config.hpp  params.hpp
Simulations of Nano- and Mesoscopic Systems/lab 3/python/: plot_energies.py  plot_evolution.py  plot_evolution_map.py  plot_wavefunctions.py
Simulations of Nano- and Mesoscopic Systems/lab 3/src/: DoubleQuantumDot.cpp  TimeEvolution.cpp  main.cpp
Simulations of Nano- and Mesoscopic Systems/lab 4/: CMakeLists.txt  README.md
Simulations of Nano- and Mesoscopic Systems/lab 4/include/: QPCSolver.hpp  RTDSolver.hpp  SingleBarrier.hpp  TransferMatrix.hpp  config.hpp  params.hpp
Simulations of Nano- and Mesoscopic Systems/lab 4/python/: plot_zad1_2.py  plot_zad3.py  plot_zad4.py
Simulations of Nano- and Mesoscopic Systems/lab 4/src/: QPCSolver.cpp  RTDSolver.cpp  SingleBarrier.cpp  TransferMatrix.cpp  main.cpp
Simulations of Nano- and Mesoscopic Systems/lab 5/: CMakeLists.txt  README.md
Simulations of Nano- and Mesoscopic Systems/lab 5/doc/ext_5/: QTBM.py
Simulations of Nano- and Mesoscopic Systems/lab 5/include/: QPC.hpp  config.hpp  params.hpp
Simulations of Nano- and Mesoscopic Systems/lab 5/python/: plot_zad1.py  plot_zad2.py  plot_zad3.py  plot_zad4.py  plot_zad5.py
Simulations of Nano- and Mesoscopic Systems/lab 5/src/: QPC.cpp  main.cpp
Simulations of Nano- and Mesoscopic Systems/lab 6/: zad_1.ipynb  zad_2.ipynb  zad_3.ipynb
(+56 files in other folders)
